fixed padding problem by removing double container, changed header align to center, small fixes

--- a/firstToast.less
+++ b/firstToast.less
@@ -229,6 +229,9 @@ html {
 	html {
 		font-size: 100%;
 	}
+	.fullname {
+		font-size: 2.1rem;
+	}
 }
 
 /*-----------------------------------*\
@@ -243,11 +246,17 @@ html {
 	font-family: 'Arizonia', Helvetica, sans-serif;
 	font-weight: 400;
 	margin-left: 4px;
+	margin-top: 22px;
 }
 
 .byline {
 
 }
+
+header, .contact-info {
+	text-align: center;
+}
+
 
 h2 {
 	font-weight: 300;
@@ -270,6 +279,8 @@ a {
 	color: white;
 	border: 1px solid @main;
 
+	font-size: 0.9rem;
+	letter-spacing: 0.04rem;
 }
 .contact-info li a:hover {
 	background-color: white;
@@ -277,7 +288,7 @@ a {
 }
 .contact-info li {
 	display: inline-block;
-	margin-right: 30px;
+	margin: 0 24px;
 	margin-top: 20px;
 }
 
